Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116344

Segmentation fault on Wayland when enabling drag and drop on QListWidget

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.6.0 Beta4, 6.7.0 FF
    • 6.5.2
    • GUI: Drag and Drop
    • None
    • Archlinux, sway
    • Linux/Wayland
    • 38f5679d5 (dev), 14d7659c7 (6.6)

      Running this minimal example under Wayland results in a segmentation fault, unless I set the QT_QPA_PLATFORM environment-variable to xcb to use XWayland instead. When using the Xorg backend, everything works as expected.

       

      Here is the backtrace (captured using gdb)

      0x00007ffff57112a5 in QDrag::dragCursor(Qt::DropAction) const () from /usr/lib/libQt6Gui.so.6
      (gdb) backtrace
      #0  0x00007ffff57112a5 in QDrag::dragCursor(Qt::DropAction) const () at /usr/lib/libQt6Gui.so.6
      #1  0x00007ffff57124dd in QBasicDrag::updateCursor(Qt::DropAction) () at /usr/lib/libQt6Gui.so.6
      #2  0x00007ffff2dbb914 in  () at /usr/lib/qt6/plugins/platforms/../../../libQt6WaylandClient.so.6
      #3  0x00007ffff7b9134a in  () at /usr/lib/libQt6Core.so.6
      #4  0x00007ffff2dbd45f in non-virtual thunk to QtWaylandClient::QWaylandDataSource::data_source_target(QString const&) () at /usr/lib/qt6/plugins/platforms/../../../libQt6WaylandClient.so.6
      #5  0x00007ffff2daceb4 in QtWayland::wl_data_source::handle_target(void*, wl_data_source*, char const*)
          () at /usr/lib/qt6/plugins/platforms/../../../libQt6WaylandClient.so.6
      #6  0x00007ffff61074f6 in  () at /usr/lib/libffi.so.8
      #7  0x00007ffff6103f5e in  () at /usr/lib/libffi.so.8
      #8  0x00007ffff6106b73 in ffi_call () at /usr/lib/libffi.so.8
      #9  0x00007ffff7fb3645 in  () at /usr/lib/qt6/plugins/platforms/../../../libwayland-client.so.0
      #10 0x00007ffff7fb3e73 in  () at /usr/lib/qt6/plugins/platforms/../../../libwayland-client.so.0
      #11 0x00007ffff7fb413c in wl_display_dispatch_queue_pending ()
          at /usr/lib/qt6/plugins/platforms/../../../libwayland-client.so.0
      #12 0x00007ffff2d7b906 in  () at /usr/lib/qt6/plugins/platforms/../../../libQt6WaylandClient.so.6
      #13 0x00007ffff7b7d147 in QObject::event(QEvent*) () at /usr/lib/libQt6Core.so.6
      #14 0x00007ffff737136b in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
          at /usr/lib/libQt6Widgets.so.6
      #15 0x00007ffff7b3b718 in QCoreApplication::notifyInternal2(QObject*, QEvent*) ()
          at /usr/lib/libQt6Core.so.6
      #16 0x00007ffff7b3ba9b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) ()
          at /usr/lib/libQt6Core.so.6
      #17 0x00007ffff7d34854 in  () at /usr/lib/libQt6Core.so.6
      #18 0x00007ffff710fa31 in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
      #19 0x00007ffff716ccc9 in  () at /usr/lib/libglib-2.0.so.0
      #20 0x00007ffff710d0e2 in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
      #21 0x00007ffff7d32794 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) ()
          at /usr/lib/libQt6Core.so.6
      #22 0x00007ffff7b45623 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
          at /usr/lib/libQt6Core.so.6
      #23 0x00007ffff7b3f1f8 in QCoreApplication::exec() () at /usr/lib/libQt6Core.so.6
      #24 0x0000555555557641 in main(int, char**) (argc=1, argv=0x7fffffffe6a8) at ../main.cpp:10 

        For Gerrit Dashboard: QTBUG-116344
        # Subject Branch Project Status CR V

            liaqi Liang Qi
            slowandfurious Boris Drykoningen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes