client: make drag and drop in same control works again

This amends 40a27c26cee7ad4e5e32eb01568777cd4e9da25c.

examples/widgets/draganddrop/draggabletext in qtbase now is fine.

Pick-to: 6.6
Fixes: QTBUG-116344
Change-Id: Ie930586fa7c6468c0e859786d968ad2343057e4d
Reviewed-by: David Redondo <qt@david-redondo.de>
Reviewed-by: Liang Qi <liang.qi@qt.io>